# MM-wan2.7-skill

./: .env.example  .gitignore  COMPETITION.md  README.md  SKILL.md  demo.html  index.html  memes.json  pyproject.toml
meme_hunter/: __init__.py  __main__.py  compose.py  config.py  gallery.py  llm.py  prompt_builder.py  quiz.py  server.py  soul.py  wanxiang.py  webapp.py
meme_hunter/sources/: __init__.py  aggregator.py
